--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "i2c.h": "c",
         "adc.h": "c",
         "game.h": "c",
-        "globals.h": "c"
+        "globals.h": "c",
+        "ssd1306.h": "c"
     }
 }
