--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "ssd1306.h": "c",
         "time.h": "c",
         "pwm.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "display.h": "c"
     }
 }
